--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!--Navbar implementation-->
     <nav class="navbar navbar-expand-md navbar-light bg-light stick-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/logo-example.jpg"/></a>
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo-example.jpg" height="150" width="200"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,5 +42,233 @@
         </div>
       </div>
     </nav>
+
+    <!--Carousel Image Slider -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/background.png" />
+          <div class="carousel-caption">
+            <h1 class="display-2">Bootstrap</h1>
+            <h3>Complete Website Layout</h3>
+            <button type="button" class="btn btn-outline-light btn-lg">
+              VIEW DEMO
+            </button>
+            <button type="button" class="btn btn-primary btn-lg">
+              Get Started
+            </button>
+          </div>
+        </div>
+        <div class="carousel-item"><img src="img/background2.png" /></div>
+        <div class="carousel-item"><img src="img/background3.png" /></div>
+      </div>
+    </div>
+
+    <!--New Section for Text/Buttons (Considered jumbotron)-->
+    <div class="container-fluid">
+      <div class="row jumbotron">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+          <p class="lead">
+            A web hosting service allows individuals and organizations to make
+            their website accessible via the World Wide Web
+          </p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+          <a href="#"
+            ><button type="button" class="btn btn-outline-secondary btn-lg">
+              Web Hosting
+            </button></a
+          >
+        </div>
+      </div>
+    </div>
+
+    <!--Welcome Section-->
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12"><h1 class="display-4">Built with Ease</h1></div>
+        <hr />
+        <div class="col-12">
+          <p class="lead">
+            Bootstrap 4 is a free and open-source front-end library with HTML
+            and CSS based desgins.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--Three Column Responsive Section-->
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+        <div class="col-xs12 col-sm-6 col-md-4">
+          <i class="fas fa-code"></i>
+          <h3>HTML</h3>
+          <p>Built with HTML5</p>
+        </div>
+        <div class="col-xs12 col-sm-6 col-md-4">
+          <i class="fas fa-bold"></i>
+          <h3>BOOTSTRAP</h3>
+          <p>Built with Bootstrap 4</p>
+        </div>
+        <div class="col-xs12 col-sm-6 col-md-4">
+          <i class="fab fa-css3"></i>
+          <h3>CSS</h3>
+          <p>Built with CSS3</p>
+        </div>
+      </div>
+      <hr class="my-4" />
+    </div>
+
+    <!--Two Column Responsive Section-->
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-lg-6">
+          <h2>If you build it...</h2>
+          <p>
+            The columns will automatically stack on top of each other when the
+            screen is less than 576px wide.
+          </p>
+          <p>
+            Resize the browser window to see the effect. Responsive web design
+            has become more imporant as the amount of mobile traffic now
+            accounts for more than half of total internet traffic
+          </p>
+          <p>
+            It can also display the web page differently depending on the screen
+            size or viewing device.
+          </p>
+          <br />
+          <a href="#" class="btn btn-primary">False Button</a>
+        </div>
+        <div class="col-lg-6"><img src="img/desk.png" class="img-fluid" /></div>
+      </div>
+    </div>
+    <hr class="my-4" />
+
+    <!--Cards-->
+    <div class="container-fluid padding">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-4">Example of Cards/Profiles</h1>
+        </div>
+        <hr />
+      </div>
+    </div>
+
+    <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="img/num0.png"
+              height="350"
+              width="50"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Number 0</h4>
+              <p class="card-text">
+                This is the first example of a card text. This can be used to
+                show multiple different sets of items, people, ect...
+              </p>
+              <a href="#" class="btn btn-outline-secondary">Example Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="img/num1.png"
+              height="350"
+              width="50"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Number 1</h4>
+              <p class="card-text">
+                This is the second example of a card text. This can be used to
+                show multiple different sets of items, people, ect...
+              </p>
+              <a href="#" class="btn btn-outline-secondary">Example Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="img/num2.png"
+              height="350"
+              width="50"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Number 2</h4>
+              <p class="card-text">
+                This is the third example of a card text. This can be used to
+                show multiple different sets of items, people, ect...
+              </p>
+              <a href="#" class="btn btn-outline-secondary">Example button</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="my-4" />
+    </div>
+
+    <!--Connect Page-->
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+        <div class="col-12"><h2>CONNECT</h2></div>
+        <div class="col-12 social padding">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-google-plus-g"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!--Footer-->
+    <footer>
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <img src="img/logo-example.jpg" height="150" width="250" />
+            <hr class="light-100" />
+            <p>555-555-5555</p>
+            <p>email@myemail.com</p>
+            <p>100 Street Name</p>
+            <p>City, State, 00000</p>
+          </div>
+          <div class="col-md-4">
+            <hr class="light" />
+            <h5>Our Hours</h5>
+            <hr class="light" />
+            <p>Monday: 9am - 5pm</p>
+            <p>Saturday: 10am - 4pm</p>
+            <p>Sunday: closed</p>
+          </div>
+          <div class="col-md-4">
+            <hr class="light" />
+            <h5>Service Area</h5>
+            <hr class="light" />
+            <p>City, State, 00000</p>
+            <p>City, State, 00000</p>
+            <p>City, State, 00000</p>
+            <p>City, State, 00000</p>
+          </div>
+          <div class="col-12">
+            <hr class="light" />
+            <h5>&copy; examplesite.com</h5>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
